--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
     --text-color-2:#161616;
     --text-color-3:#4D4D4D;
     --bg-color:#161616;
+    --footer-bg:#1E1E1E;
     --btn-bg:#FFFFFF;
     --btn-text:#fff;
     --btn-active:#DD0000;
@@ -76,7 +77,6 @@ section{
     font-size:60px;
     font-weight: var(--font-Bold);
     line-height: 60px;
-
 }
 .banner_info p{
     font-size: 16px;
@@ -162,3 +162,42 @@ section{
     margin-right: 10px;
 }
 /* blogs section start */
+/* foonter section start */
+footer{
+    background-color:var(--footer-bg);
+    color: var(--text-color-1);
+    padding: 50px;
+}
+footer h2{
+    font-size: 40px;
+    font-weight: var(--font-SemiBold); 
+    padding-bottom: 30px;  
+}
+.footer_link{
+    border-top: 1px solid rgba(255, 255, 255, .1);
+    padding: 20px 0;
+}
+.footer_link a{
+    padding: 10px 20px;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: var(--font-Regular);
+    color:var(--text-color-1) ;
+    transition: var(--transition);
+}
+.footer_link a:hover{
+    color:var(--btn-active) ;
+}
+.social_icon{
+    padding: 30px;
+}
+.social_icon i{
+    padding: 10px;
+    border-radius: 100%;
+    background-color: var(--text-color-2);
+    transition: var(--transition);
+}
+.social_icon i:hover{
+    background-color: var(--btn-active);
+}
+/* foonter section start */
