--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,7 @@ footer h2{
 .social_icon i{
     padding: 10px;
     border-radius: 100%;
+    font-size: 16px;
     background-color: var(--text-color-2);
     transition: var(--transition);
 }
