--- a/css/style.css
+++ b/css/style.css
@@ -217,3 +217,79 @@ footer h2{
     width:220px;
 }
 /* match page css start */
+/*Responsive css start  */
+/* Responsive for mobile device */
+@media screen and (max-width:668px) {
+    /* common css */
+    .container{
+        width:100%;
+        margin:0 auto;
+    }
+    .row{
+        flex-direction: column;
+    }
+    section{
+        width: 100%;
+        padding: 10px 20px ;
+    }
+    /* banner css */
+    .banner_info{
+        text-align: center;
+    }
+    .banner_info h1{
+        font-size:30px;
+        line-height: 60px;
+    }
+    .banner_info p{
+        font-size: 12px;
+        color:var(--text-color-1);
+        margin-top: 10px;
+        margin-bottom: 20px;
+    }
+    #banner_sec .container{
+        padding:  30px 30px 0px 30px;
+    }
+    .btn{
+        padding: 8px 12px;
+        font-size:15px ;
+      
+    }
+    .banner_img{
+        margin-top: 20px;
+    }
+    .banner_img img{
+        position: relative;
+        top: 10px;
+        width:auto;
+        height: auto;
+    }
+    /*blogs css  */
+    #blog_sec .row{
+        display:flex;
+        background-color: none;
+    }
+    .blogs_menu{
+        background-color: var(--text-color-1);
+    }
+    .blogs_menu .btn{
+        border: 1px solid #E8E8E8;
+        width: auto;
+        padding: 10px 50px;
+    }
+    .blogs{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        gap: 20px;
+        align-items: center;
+    }
+    .blog{
+        width: 100%;
+        
+    }
+    .blog img{
+        width:100%;
+    }
+    footer .footer_link a{
+        display: block;
+    }
+/*Responsive css start  */
