--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,9 @@ body{
 .center{
     text-align: center;
 }
+.left{
+    text-align: left;
+}
 section{
     margin: 50px 0px 100px;
 }
@@ -201,6 +204,16 @@ footer h2{
 .social_icon i:hover{
     background-color: var(--btn-active);
 }
+.more{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top:50px;
+    width: 100%;
+}
+.more a{
+    display: none;
+}
 /* foonter section start */
 /* match page css start */
 .match{
@@ -242,7 +255,6 @@ footer h2{
     }
     .banner_info p{
         font-size: 12px;
-        color:var(--text-color-1);
         margin-top: 10px;
         margin-bottom: 20px;
     }
@@ -277,14 +289,17 @@ footer h2{
         padding: 10px 50px;
     }
     .blogs{
-        display: grid;
-        grid-template-columns: repeat(1,1fr);
-        gap: 20px;
+        display: flex;
+        flex-direction: column;
         align-items: center;
+        justify-content: center;
+        width: 100%;
     }
     .blog{
-        width: 100%;
-        
+       text-align: center;
+    }
+    .blog_info{
+        text-align:left
     }
     .blog img{
         width:100%;
@@ -292,4 +307,91 @@ footer h2{
     footer .footer_link a{
         display: block;
     }
+    .more a{
+        display: block;
+    }
+}
+    /* Responsive for tablet device */
+@media screen and (min-width:668.1px ) and (max-width:992px){
+    /* common css */
+    .container{
+        width:100%;
+        margin:0 auto;
+    }
+    .row{
+        flex-direction: row;
+    }
+    section{
+        width: 100%;
+        padding: 10px 20px 30px 20px;
+    }
+    /* banner css */
+    .banner_info h1{
+        font-size:35px;
+        line-height: 60px;
+    }
+    .banner_info p{
+        font-size: 14px;
+        margin-top: 10px;
+        margin-bottom: 20px;
+    }
+    #banner_sec .container{
+        padding:  30px 30px 0px 30px;
+    }
+    .btn{
+        padding: 12px 16px;
+        font-size:15px ;   
+    }
+    .banner_img{
+        margin-top: 20px;
+    }
+    .banner_img img{
+        position: relative;
+        top: 10px;
+        width:auto;
+        height: auto;
+    }
+    
+    /*blogs css  */
+    #blog_sec .row{
+        display:flex;
+        flex-direction: column;
+        background-color: none;
+    }
+    .blogs_menu{
+        display: flex;
+        flex-direction: row;
+        background-color: var(--text-color-1);
+    }
+    .blogs_menu .btn{
+        border: 1px solid #E8E8E8;
+        width: auto;
+        margin: 0 10px;
+        padding: 10px 50px;
+    }
+    .blogs{
+        width: 100%;
+        grid-template-columns: repeat(2,1fr);
+    }
+    .blog{
+       text-align: center;
+    }
+    .blog_info{
+        text-align:left
+    }
+    .blog img{
+        width:100%;
+    }
+    footer .footer_link{
+       text-align: center;
+    }
+    footer .footer_link a{
+        display: inline-block;
+
+    }
+    .more a{
+        display: block;
+    }
+}
+
 /*Responsive css start  */
