--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,8 @@
     --text-color-1:#fff;
     --text-color-2:#161616;
     --text-color-3:#4D4D4D;
-    --bg-color:#161616;
-    --footer-bg:#1E1E1E;
+    --bg-color:#090A27;
+    --footer-bg:#090A27;
     --btn-bg:#FFFFFF;
     --btn-text:#fff;
     --btn-active:#DD0000;
